bug: overlapping of content in info-section
- hardcoding of grid-row removed.

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -61,13 +61,8 @@
   .section.info-vip .columns-wrapper {
     width: unset;
     grid-column: 2/3;
-    grid-row: 2/3;
+    grid-row: auto;
     padding: 25px 100px 0 15px;
-  }
-
-  .section.info-vip > .area-features-wrapper +  .default-content-wrapper + .columns-wrapper {
-    grid-row: 4/5;
-    padding-top:0;
   }
 
   /* COLUMNS VIP LOCATION TYPE */
